<resources>

    <string name="app_name">店音管家</string>
    <string name="menu_settings">Settings</string>
	<string name="desc">desc</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_finish">上拉加载更多</string>
    
    <string name="slogan">助你打造统一的店铺音乐风格</string>
    <string name="service_qq">客 服 QQ：2724730997</string>
    <string name="service_telephone">电话微信：18925293345</string>
    
     <string name="ftp_help">请在“我的电脑”地址栏中输入(账户密码都为"znt")：</string>
    
    <string name="help_doc">操作指南</string>
    <string name="help_step_one">一. 连接音响</string>
    <string name="help_step_one_infor">连接店内WIFI，选择设备即可自动连接</string>
    <string name="help_step_two">二. 点播歌曲</string>
    <string name="help_step_two_infor">在曲库中选择歌曲,点播成功的歌曲加入点播队列中</string>
    <string name="help_step_three">三. 编辑点播</string>
    <string name="help_step_three_infor">插播金币越多，歌曲越靠前，播放的时候可以显示留言信息</string>
    <string name="help_step_four">四. 管理员操作</string>
    <string name="help_step_four_infor">管理员可以对音响进行配置，申请管理员请联系客服</string>
    <string name="help_step_five">五. 注意事项</string>
    <string name="help_step_five_infor">1.音响连接成功后请不要切换或者关闭网络；\n\n 2.每次只能点播一首歌曲，后面点播的歌曲会覆盖上一次点播的歌曲；\n\n 3.网络信号不稳定时可能会出现点播的歌曲未播放的问题，请重新点播.</string>
    
    <string  name="scan_qrcode_connect">扫面二维码连接音响</string>
    <string  name="change_speaker">更换音响设备</string>
    
    <!-- <string  name="system_detail">http://www.zhunit.com/blog/system.html</string> -->
    <string  name="system_detail">http://www.zhunit.com/page/product_info.html</string>
    <string  name="get_box">http://www.zhunit.com/business/merch_buy_box.jsp</string>
    
    <string  name="wenxin_notice">温馨提示:</string>
    <string  name="no_hint_anymore">不再提示</string>
    <string  name="i_know">我知道了</string>
    <string  name="gongsi">深圳助你科技有限公司\nhttps://www.zhunit.com  \n\n 战略合作伙伴：\n上海昆卡司企业管理有限公司\nhttp://www.45coffee.com</string>
    <string  name="dianbo_notice">*点播的歌曲会放入点播队列中，每次只能点播一首歌曲 \n *如果点播手机本地歌曲请不要切换网络或者关闭app</string>
    
    <string name="song_message_default">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;点一首我们最爱的歌，回忆我们美好的曾经，人人点歌，播放你的心声</string>
    <string name="about_desc">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;店音，助你打造统一的店铺音乐风格，连锁店背景音乐整体解决方案，我们只为有品位、有远见的客户服务 。集中管理、分时段播放、分级管理、信息监控、音乐互动、人工电台，让你的背景音乐更有吸引力。\n\n如果您的店铺有需要，可联系我们的客服：</string>
    
    <string name="connect_server_doing">连接服务器...</string>
    <string name="connect_server_fail">连接服务器失败，请重试~</string>
    <string name="device_disconnected">设备断开连接，请重新连接设备~</string>
    <string name="request_time_out">请求超时，请重试~</string>
    
    <string name="scan_tips">将二维码图片对准扫描框即可自动扫描</string>
    
    <string name="no_device_select_hint">没有连接记录，请扫描新的设备~</string>
    <string name="search_device_auto_hint">正在自动扫描当前网络的设备...</string>
    <string name="device_select_hint">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;请点击下面的设备开始连接音响设备或者点击二维码添加新的设备，请确保手机连接WIFI网络，使用过程中不要切换网络.</string>
    
    <string name="local_music_hint_phone">没有检测到手机本地列表 \n 请检查音箱设备或点击刷新操作。</string>
    <string name="local_music_hint_speacker">没有检测到音响本地列表 \n 请检查音箱设备或点击刷新操作。</string>
    
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    
</resources>