<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
        <RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="140dp"
	        >
	        
	        <LinearLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_centerInParent="true"
	            >
	            <ImageView 
	                android:id="@+id/iv_about_logo"
		            android:layout_width="64dp"
		            android:layout_height="64dp"
		            android:src="@drawable/logo"
		            android:layout_gravity="center_horizontal"
		            />
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:padding="6dp"
	                android:text="@string/app_name"
	                android:textColor="@color/text_black_on"
	                android:layout_gravity="center_horizontal"
	                android:textSize="@dimen/title_text_size"
	                />
	        </LinearLayout>
	        <View 
	            android:layout_width="fill_parent"
	            android:layout_height="1dp"
	            android:background="@color/spacebar"
	            android:layout_alignParentBottom="true"
	            />
	    </RelativeLayout>
	
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about_desc"
	        android:paddingLeft="22dp"
	        android:paddingRight="22dp"
	        android:paddingTop="12dp"
	        android:textColor="@color/text_black_on"
	        android:textSize="@dimen/normal_text_size"
	        />
	    
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/service_qq"
	        android:paddingLeft="22dp"
	        android:paddingTop="12dp"
	        />
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/service_telephone"
	        android:paddingLeft="22dp"
	        android:paddingTop="12dp"
	        android:autoLink="email|phone|web"
	        />
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/gongsi"
	        android:paddingLeft="22dp"
	        android:paddingTop="12dp"
	        android:autoLink="email|phone|web"
	        />
    </LinearLayout>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>